meta-tags y required de form

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/code-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Meta Tags -->
+    <title>Enzo Mazzariol Portfolio</title>
+    <meta name="description" content="Portafolio personal de [Tu Nombre], desarrollador multiplataforma y web. Descubre mis proyectos y habilidades." />
+    <meta name="author" content="Enzo Mazzariol" />
+    <meta name="keywords" content="portafolio, desarrollo web, aplicaciones multiplataforma, React, Tailwind, Vite, HTML, CSS, Java, Git, Programación" />
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="Portafolio web Enzo Mazzariol" />
+    <meta property="og:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador." />
+    <meta property="og:image" content="https://tu-sitio.com/preview-image.jpg" />
+    <meta property="og:url" content="https://enzomazzariol.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://enzomazzariol.netlify.app/" />
+
+    <!-- Space mono Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="/src/index.css">
-    <title>Enzo Mazzariol Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
