nuevo formato de imagen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Enzo Mazzariol Portafolio Web" />
     <meta property="og:description"
       content="Portafolio de Enzo Mazzariol, desarrollador multiplataforma y web. Descubre mis proyectos y habilidades." />
-    <meta property="og:image" content="ttps://enzomazzariol.netlify.app/assets/preview-portfolio.jpg" />
+    <meta property="og:image" content="ttps://enzomazzariol.netlify.app/assets/preview-portfolio.jpeg" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
     <meta property="twitter:title" content="Enzo Mazzariol Portafolio Web" />
     <meta property="twitter:description"
       content="Portafolio de Enzo Mazzariol, desarrollador multiplataforma y web. Descubre mis proyectos y habilidades." />
-    <meta property="twitter:image" content="https://enzomazzariol.netlify.app/assets/preview-portfolio.jpg" />
+    <meta property="twitter:image" content="https://enzomazzariol.netlify.app/assets/preview-portfolio.jpeg" />
     
     <!-- Canonical -->
     <link rel="canonical" href="https://enzomazzariol.netlify.app/" />
