url image meta data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/code-favicon.svg" />
@@ -15,6 +15,7 @@
     <meta name="keywords"
       content="portafolio, desarrollo web, aplicaciones multiplataforma, React, Tailwind, Vite, HTML, CSS, Java, Git, Programación" />
     <meta name="robots" content="index, follow" />
+    <meta property="og:locale" content="es_ES" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -22,7 +23,7 @@
     <meta property="og:title" content="Enzo Mazzariol Portafolio Web" />
     <meta property="og:description"
       content="Portafolio de Enzo Mazzariol, desarrollador multiplataforma y web. Descubre mis proyectos y habilidades." />
-    <meta property="og:image" content="ttps://enzomazzariol.netlify.app/assets/preview-portfolio.jpeg" />
+    <meta property="og:image" content="https://enzomazzariol.netlify.app/assets/preview-portfolio.jpeg" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
