--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/code-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta Tags -->
-    <title>Enzo Mazzariol Portfolio Web</title>    
+    <title>Enzo Mazzariol Portfolio Web</title>  
+    
+    <meta name="google-site-verification" content="zd0dQEaW_6xRcI8WLAZhrUB1mkxDf58HjueAvxRSejM" />
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Enzo Mazzariol Portafolio Web" />
