--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/code-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta Tags -->
-    <title>Enzo Mazzariol Portfolio Web</title>  
+    <title>Enzo Mazzariol Portafolio Web - Desarrollador Full Stack</title>  
     
     <meta name="google-site-verification" content="ZTN4ED_AsrL0KhJu_IvJSbO3dOlghfrA70wZ7gRnJ5A" />
 
@@ -22,7 +22,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://enzomazzariol.is-a.dev/" />
-    <meta property="og:title" content="Enzo Mazzariol Portafolio Web" />
+    <meta property="og:title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stackb" />
     <meta property="og:description"
       content="Desarrollador Full Stack con experiencia en el desarrollo web y mobile. Descubre mis proyectos y habilidades." />
     <meta property="og:image" content="https://enzomazzariol.is-a.dev/assets/preview-portfolio.jpeg" />
@@ -32,7 +32,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://enzomazzariol.is-a.dev/" />
-    <meta property="twitter:title" content="Enzo Mazzariol Portafolio Web" />
+    <meta property="twitter:title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stack" />
     <meta property="twitter:description"
       content="Desarrollador Full Stack con experiencia en el desarrollo web y mobile. Descubre mis proyectos y habilidades." />
     <meta property="twitter:image" content="https://enzomazzariol.is-a.dev/assets/preview-portfolio.jpeg" />
