--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stack" />
     <meta name="author" content="Enzo Mazzariol" />
     <meta name="description"
-      content="Desarrollador Full Stack con experiencia en el desarrollo web y mobile. Descubre mis proyectos y habilidades." />
+      content="Portafolio de Enzo Mazzariol. Desarrollador Full Stack con experiencia en web y móvil. React, Node.js, Java, Spring Boot. Proyectos, trayectoria y contacto." />
     <meta name="keywords"
       content="Desarrollador Full Stack, Desarrollo Web y Móvil, Web Developer, Aplicaciones Multiplataforma, React, Spring Boot, Java, Firebase, Tailwind CSS, Expo, Docker, MySQL, Portfolio de Desarrollador" />
     <meta name="robots" content="index, follow" />
@@ -22,9 +22,9 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://enzomazzariol.is-a.dev/" />
-    <meta property="og:title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stackb" />
+    <meta property="og:title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stack" />
     <meta property="og:description"
-      content="Desarrollador Full Stack con experiencia en el desarrollo web y mobile. Descubre mis proyectos y habilidades." />
+      content="Portafolio de Enzo Mazzariol. Desarrollador Full Stack con experiencia en web y móvil. React, Node.js, Java, Spring Boot. Proyectos, trayectoria y contacto." />
     <meta property="og:image" content="https://enzomazzariol.is-a.dev/assets/preview-portfolio.jpeg" />
     <meta property="og:site_name" content="Enzo Mazzariol Portfolio" />
     <meta property="og:image:alt" content="Captura del portafolio de Enzo Mazzariol" />
@@ -34,11 +34,40 @@
     <meta property="twitter:url" content="https://enzomazzariol.is-a.dev/" />
     <meta property="twitter:title" content="Enzo Mazzariol Portafolio Web - Desarrollador Full Stack" />
     <meta property="twitter:description"
-      content="Desarrollador Full Stack con experiencia en el desarrollo web y mobile. Descubre mis proyectos y habilidades." />
+      content="Portafolio de Enzo Mazzariol. Desarrollador Full Stack con experiencia en web y móvil. React, Node.js, Java, Spring Boot. Proyectos, trayectoria y contacto." />
     <meta property="twitter:image" content="https://enzomazzariol.is-a.dev/assets/preview-portfolio.jpeg" />
     
     <!-- Canonical -->
     <link rel="canonical" href="https://enzomazzariol.is-a.dev/" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Person",
+          "@id": "https://enzomazzariol.is-a.dev/#person",
+          "name": "Enzo Mazzariol",
+          "jobTitle": "Desarrollador Full Stack",
+          "url": "https://enzomazzariol.is-a.dev/",
+          "sameAs": [
+            "https://www.linkedin.com/in/enzo-mazzariol/",
+            "https://github.com/enzomazzariol"
+          ],
+          "email": "mazzariolenzo@gmail.com",
+          "description": "Desarrollador Full Stack con experiencia en desarrollo web y móvil. React, Node.js, Java, Spring Boot, Tailwind CSS."
+        },
+        {
+          "@type": "WebSite",
+          "name": "Enzo Mazzariol - Portafolio",
+          "url": "https://enzomazzariol.is-a.dev/",
+          "description": "Portafolio de Enzo Mazzariol, desarrollador Full Stack. Proyectos, trayectoria y contacto.",
+          "author": { "@id": "https://enzomazzariol.is-a.dev/#person" }
+        }
+      ]
+    }
+    </script>
 
     <!-- Space mono Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
