--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/code-favicon.svg" />
+    <!-- Favicon: URL absoluta para que Google lo muestre en resultados de búsqueda -->
+    <link rel="icon" type="image/svg+xml" href="https://enzomazzariol.is-a.dev/code-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta Tags -->
     <title>Enzo Mazzariol Portafolio Web - Desarrollador Full Stack</title>  
